<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PEonline</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_register">register</string>
    <string name="title_activity_home">home</string>
    <string name="title_activity_teacher_main_menu">Main Menu</string>
    <string name="title_activity_student_main_menu">Main Menu</string>
    <string name="gps_activity"> GPS Activity </string>
    <string name="assignment_description">Assignment description:</string>
    <string name="add_description_here">add description here</string>
    <string name="assignment_creation_mode">Assignment creation mode</string>
    <string name="done">Done</string>
    <string name="assignment_name">Assignment name:</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="cardio_exercise">Cardio Exercise</string>
    <string name="title_activity_view_class">ViewClass</string>
    <string name="title_activity_view_assignments">ViewAssignments</string>
    <string name="title_activity_view_submissions_for_assignment">ViewSubmissionsForAssignment</string>
    <string name="title_activity_non_stationary_submission">nonStationarySubmission</string>
    <string name="title_activity_view_student_stats">ViewStudentStats</string>
    <string name="create_course">Create Course</string>
    <string name="class_name">Class name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="distance">Distance:</string>
    <string name="time">Time:</string>
    <string name="speed">Speed:</string>
    <string name="enroll">Enroll</string>
    <string name="createClass">Create class</string>
    <string name="create_an_assignment">Create an assignment</string>
    <string name="students">Students</string>
    <string name="assignments">Assignments</string>
    <string name="submissions">Submissions</string>
    <string name="newAssignment">New Assignment</string>
    <string name="Title">Title:</string>
    <string name="StationaryAssignment">Stationary assignment</string>
</resources>